# TCP-Socket-Messaging

./: CMakeLists.txt  LICENSE  README.md
include/: client.h  server.h  tcpCommunication.h
src/client-code/: client  client.cpp  main.cpp
src/server-code/: main.cpp  server  server.cpp
